fix video height on mobiles

--- a/src/styles/components/watch.responsive.css
+++ b/src/styles/components/watch.responsive.css
@@ -61,3 +61,10 @@
         width: calc(50% - var(--small-padding));
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .watch .video {
+        height: calc(100vh - 12.2rem);
+        height: calc(100dvh - 12.2rem);
+    }
+}
